[project]
name = "colorscheme-generator"
version = "0.1.0"
description = "A Python utility to generate color schemes from a base color."
authors = [{ name="Kevin Veen-Birkenbach", email="kevin@veen.world", homepage = "https://www.veen.world" }]
license = "MIT"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
